--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "body-parser": "^1.14.2",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
-    "grunt": "~0.4.2",
+    "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "^1.0.0",
+    "grunt-concurrent": "^2.3.0",
     "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-qunit": "^0.7.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-fest": "~0.1.4",
-    "grunt-shell": "^1.1.1",
+    "grunt-fest": "^0.1.6",
+    "grunt-sass": "^1.2.0",
+    "grunt-shell": "^1.3.0",
     "http-proxy-middleware": "^0.14.0"
   },
   "scripts": {
