--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "grunt-fest": "^0.1.6",
     "grunt-sass": "^1.2.0",
     "grunt-shell": "^1.3.0",
-    "http-proxy-middleware": "^0.14.0"
+    "http-proxy-middleware": "^0.14.0",
+    "less-plugin-autoprefix": "^1.5.1"
   },
   "scripts": {
     "start": "node server"
