--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-qunit": "^0.7.0",
+    "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-fest": "^0.1.6",
