--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     "express": "^4.13.4",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-concat-css": "^0.3.1",
     "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-qunit": "^0.7.0",
     "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-fest": "^0.1.6",
     "grunt-sass": "^1.2.0",
     "grunt-shell": "^1.3.0",
     "http-proxy-middleware": "^0.14.0",
-    "less-plugin-autoprefix": "^1.5.1"
+    "less-plugin-autoprefix": "^1.5.1",
+    "sweetalert": "^1.1.3"
   },
   "scripts": {
     "start": "node server"
